# X-chat-Android

./: BUILD_APK_GUIDE_FULL.md  FIX_BUILD_ERRORS.md  README.md  TROUBLESHOOTING_GUIDE.md  WSL_BUILD_GUIDE.md  angle_backend_test.py  buildozer.spec  check_environment.ps1  enhanced_main.py  enhanced_themes.py  interactive_test.py  loading_dialog.py  main.py  minimal_test.py  pyproject.toml  splash_screen.py  test_api_direct.py  window_diagnostic.py  window_position_fix.py
.github/workflows/: build.yml
backup/: main.py
xchat/: __init__.py  __main__.py  app.py
